--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         max-width: 800px;
         margin: auto;
       }
-      div {
+      main > div {
         padding: 1em;
         display: flex;
       }
